third_party/move/move-compiler-v2/tests/checking/anonymous_fields/decl_ok.exp

Diagnostics:
error: expected struct constructor `test::E1{ ... }` for struct constructor `test::E1`
   ┌─ tests/checking/anonymous_fields/decl_ok.move:25:9
   │
25 │         E1::V2();
   │         ^^^^^^^^
